crates/language-v2/tests/src/fail/p1_definitions/duplicate_expression_name/test.stderr
error: An expression with the name 'Expression1' already exists.
  --> src/fail/p1_definitions/duplicate_expression_name/test.rs:35:40
   |
35 | ...                   name = Expression1,
   |                              ^^^^^^^^^^^
